@@ -1,5 +1,8 @@
 2006-08-30  Claes Nästén  <me{@}pekdon{.}net>
 
+	* src/Frame.cc (Frame::setStateTitle): 
+	Make custom set titles persist between restarts.
+
 	* src/CfgParser.cc (CfgParser::Entry::free_tree): 
 	Plug major memory leak in CfgParser.
 
